--- a/css/media.css
+++ b/css/media.css
@@ -116,7 +116,7 @@
   }
 
   .sv-item__header {
-    margin-bottom: 11px;
+    margin-bottom: 10px;
   }
 
   /* Prices */
@@ -127,7 +127,7 @@
   .prices-items__heading {
     font-size: 35px;
     margin-left: 14px;
-    margin-bottom: 57px;
+    margin-bottom: 36px;
   }
 
   .prices-items__header {
@@ -167,7 +167,7 @@
 
   .contacts__header {
     order: 1;
-    margin: 0 0 100px;
+    margin: 0;
   }
 
   .contacts__city-select {
@@ -180,7 +180,7 @@
     vertical-align: bottom;
   }
 
-  /* Foter */
+  /* Footer */
   .footer {
     padding: 33px 0 30px;
   }
@@ -338,7 +338,7 @@
   .prices-items__heading {
     font-size: 25px;
     margin-left: 3px;
-    margin-bottom: 36px;
+    margin-bottom: 40px;
   }
 
   .prices__wrapper {
@@ -374,8 +374,8 @@
   }
 
   .prices-items__item {
-    width: 184px;
-    margin-bottom: 15px;
+    width: 180px;
+    margin-bottom: 14px;
     padding: 16px 42px 13px 33px;
   }
 
@@ -384,6 +384,7 @@
   }
 
   .prices-items__name {
+    max-width: 110px;
     font-size: 15px;
     line-height: 1.3;
     text-align: start;
@@ -409,18 +410,15 @@
   .contacts__header {
     order: 1;
     margin-right: 0px;
-    margin-bottom: 81px;
+    margin-bottom: 0;
     margin-top: 0;
     font-size: 25px;
     line-height: 1.28;
   }
 
-  /*   .contacts__choise {
-    margin-top: 0;
-    margin-bottom: 132px;
-    width: 301px;
-    padding: 5px 23px 5px 20px;
-  } */
+  .dropdown-button {
+    margin: 81px 0px 133px;
+  }
 
   .contacts__city-select {
     width: 300px;
@@ -428,6 +426,14 @@
     padding-left: 19px;
     margin-top: 0;
     margin-bottom: 133px;
+  }
+
+  .contacts__select {
+    max-width: 300px;
+  }
+
+  .dropdown-button {
+    width: 300px;
   }
 
   .contacts__img {
