--- a/css/style.css
+++ b/css/style.css
@@ -284,15 +284,11 @@ body {
 
 .prices-items__item {
   width: 250px;
+  padding: 15px 42px 14px 40px;
   margin-bottom: 32px;
-
   background: #EDF2EC;
   border-radius: 20px;
   cursor: pointer;
-}
-
-.prices-items__header {
-  padding: 15px 42px 14px 40px;
 }
 
 .prices-items__item:hover {
@@ -307,9 +303,9 @@ body {
   margin-bottom: 0px;
 }
 
-
 .prices-items__name {
   position: relative;
+  max-width: 170px;
   font-weight: 700;
   font-size: 20px;
   line-height: 1;
@@ -348,7 +344,6 @@ body {
 }
 
 .price--active .prices-items__body {
-
   max-height: 500px;
 }
 
@@ -473,7 +468,7 @@ body {
   width: 450px;
   height: 50px;
   padding-left: 22px;
-  margin: 94px 0 0;
+  margin: 98px 0 250px;
 
   text-align: left;
   font-family: 'Inika', serif;
