--- a/css/style.css
+++ b/css/style.css
@@ -335,8 +335,8 @@ body {
 }
 
 .prices-items__body {
-  padding-left: 40px;
-  padding-right: 41px;
+  /* padding-left: 40px;
+  padding-right: 41px; */
   position: relative;
   max-height: 0;
   overflow: hidden;
@@ -351,8 +351,9 @@ body {
   content: "";
   position: absolute;
   top: 6px;
-  width: 68%;
-  border: 0.5px solid #AEA1A1;
+  width: 100%;
+  height: 1px;
+  background-color: #AEA1A1;
 }
 
 .prices-items__text {
@@ -456,6 +457,7 @@ body {
 }
 
 .contacts__img {
+  margin-top: 250px;
   margin-right: 113px;
   vertical-align: bottom;
 }
@@ -468,7 +470,7 @@ body {
   width: 450px;
   height: 50px;
   padding-left: 22px;
-  margin: 98px 0 250px;
+  margin: 98px 0 0;
 
   text-align: left;
   font-family: 'Inika', serif;
@@ -490,28 +492,30 @@ body {
 .dropdown-button--active {
   box-shadow: none;
   background: #c1e698;
-  background-image: url(../resourсes/img/select-arrow-rotate.svg);
-  background-repeat: no-repeat;
-  background-position: 92.2% 51%;
-
-}
-
-.dropdown-button--changeArrow {
-
   background-image: url(../resourсes/img/select-arrow.svg);
   background-repeat: no-repeat;
   background-position: 92.2% 51%;
 }
 
-.dropdown-list {
+.dropdown-button--BottomArrow {
+  background-image: url(../resourсes/img/select-arrow.svg);
+  background-repeat: no-repeat;
+  background-position: 92.2% 51%;
+}
 
+.dropdown-button--topArrow {
+  background-image: url(../resourсes/img/drop_btn.svg);
+  background-repeat: no-repeat;
+  background-position: 92.2% 51%;
+}
+
+.dropdown-list {
   display: none;
   background: #DCE9D9;
   padding: 27px 50px 31px 26px;
 }
 
 .dropdown-list--visible {
-
   display: block;
 }
 
@@ -550,8 +554,6 @@ body {
 .contacts__city-select .contacts__option {
   border: none;
 }
-
-.contacts__city-select:focus-visible {}
 
 .contacts__city-select:focus {
   outline: none;
@@ -596,7 +598,6 @@ body {
 }
 
 .contacts__link {
-
   font-family: 'Inika', serif;
   font-weight: 700;
   font-size: 10px;
